// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion should open the first accordion item by default 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
    data-orientation="vertical"
    data-testid="accordion-test-id"
  >
    <div
      class="group"
      data-orientation="vertical"
      data-state="open"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="open"
          >
            <button
              aria-controls="radix-«r9»"
              aria-expanded="true"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="open"
              id="radix-«r8»"
              type="button"
            >
              Title 1
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r8»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="open"
            data-testid="accordion-content-accordion-item-1"
            id="radix-«r9»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
          >
            <div
              class="relative h-0.5 w-full bg-divider-gradient"
              data-testid="divider-test-id"
              role="separator"
            >
              <span
                class="absolute inset-0 h-full w-full divider-stripes-8"
              />
            </div>
            Some content for the first accordion item. This can be any text or component that you want to display when the accordion is expanded.
          </div>
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«rb»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«ra»"
              type="button"
            >
              Title 2
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«ra»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-2"
            hidden=""
            id="radix-«rb»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«rd»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«rc»"
              type="button"
            >
              Title 3
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«rc»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-3"
            hidden=""
            id="radix-«rd»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«rf»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«re»"
              type="button"
            >
              Title 4
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«re»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-4"
            hidden=""
            id="radix-«rf»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Accordion should render accordion items correctly 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
    data-orientation="vertical"
    data-testid="accordion-test-id"
  >
    <div
      class="group"
      data-orientation="vertical"
      data-state="open"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="open"
          >
            <button
              aria-controls="radix-«r1»"
              aria-expanded="true"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="open"
              id="radix-«r0»"
              type="button"
            >
              Title 1
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r0»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="open"
            data-testid="accordion-content-accordion-item-1"
            id="radix-«r1»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
          >
            <div
              class="relative h-0.5 w-full bg-divider-gradient"
              data-testid="divider-test-id"
              role="separator"
            >
              <span
                class="absolute inset-0 h-full w-full divider-stripes-8"
              />
            </div>
            Some content for the first accordion item. This can be any text or component that you want to display when the accordion is expanded.
          </div>
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r3»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«r2»"
              type="button"
            >
              Title 2
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r2»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-2"
            hidden=""
            id="radix-«r3»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r5»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«r4»"
              type="button"
            >
              Title 3
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r4»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-3"
            hidden=""
            id="radix-«r5»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
    <div
      class="group"
      data-orientation="vertical"
      data-state="closed"
    >
      <article
        class="rounded-default h-full w-full bg-card-gradient-left pl-px"
        data-testid="basic-card-test-id"
      >
        <div
          class="bg-bg-secondary border-grey rounded-inner-card h-full w-full border-1 border-l-0 p-6 sm:p-8 md:py-10"
        >
          <h3
            data-orientation="vertical"
            data-state="closed"
          >
            <button
              aria-controls="radix-«r7»"
              aria-expanded="false"
              class="group-data-[state=open]:text-main flex w-full items-center justify-between text-lg font-bold sm:text-2xl"
              data-orientation="vertical"
              data-radix-collection-item=""
              data-state="closed"
              id="radix-«r6»"
              type="button"
            >
              Title 4
              <svg
                class="h-6 w-6 stroke-white sm:h-8 sm:w-8 group-data-[state=open]:stroke-main transition-transform duration-200 group-data-[state=open]:rotate-180"
                data-testid="chevron-test-id"
                fill="none"
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12L16 20L24 12"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </h3>
          <div
            aria-labelledby="radix-«r6»"
            class="mt-6 flex flex-col gap-6 sm:mt-8 sm:gap-8 md:mt-10 md:gap-10"
            data-orientation="vertical"
            data-state="closed"
            data-testid="accordion-content-accordion-item-4"
            hidden=""
            id="radix-«r7»"
            role="region"
            style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
          />
        </div>
      </article>
    </div>
  </div>
</div>
`;
